--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "strict": true,
+    "strict": false,
     "noEmit": true,
     "allowJs": true,
     "module": "esnext",
