--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@mui/system": "^5.14.7",
     "@mui/x-data-grid": "^6.12.0",
     "@mui/x-date-pickers": "^6.12.0",
+    "@react-google-maps/api": "^2.19.3",
     "@react-pdf/renderer": "^3.1.12",
     "apexcharts": "^3.42.0",
     "autosuggest-highlight": "^3.3.4",
