--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Vite & TypeScript",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host=0.0.0.0",
     "build": "tsc && vite build",
     "start": "vite preview",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
