--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "date-fns": "^2.30.0",
     "firebase": "^10.3.0",
     "framer-motion": "^10.16.2",
+    "google-libphonenumber": "^3.2.34",
     "highlight.js": "^11.8.0",
     "history": "^5.3.0",
     "i18next": "^23.4.6",
@@ -79,6 +80,7 @@
     "react-map-gl": "^7.1.5",
     "react-markdown": "^8.0.7",
     "react-organizational-chart": "^2.2.1",
+    "react-phone-input-2": "^2.15.1",
     "react-quill": "^2.0.0",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
@@ -99,6 +101,7 @@
     "@babel/plugin-syntax-flow": "^7.22.5",
     "@babel/plugin-transform-react-jsx": "^7.22.5",
     "@types/autosuggest-highlight": "^3.2.0",
+    "@types/google-libphonenumber": "^7.4.30",
     "@types/lodash": "^4.14.197",
     "@types/mapbox-gl": "^2.7.13",
     "@types/node": "^20.5.7",
